# backend

./: .gitignore  Dockerfile  README.md  RENDER_ENV_SETUP.txt  alembic.ini  backend-setup.txt  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bcc21751ccd0_initial_migration_with_all_models.py  e87c691235ea_add_amount_paid_column_to_plan_claims.py
app/: main.py
app/api/v1/: admin.py  auth.py  plans.py  router.py
app/core/: config.py  logging_utils.py
app/db/: session.py
app/models/: __init__.py  otp_code.py  plan_claim.py  user.py  user_session.py
app/schemas/: __init__.py  admin.py  auth.py  plan.py
app/services/: __init__.py  msg91.py
