[project]
name = "myveltrak-backend"
version = "0.1.0"
description = "MyVeltrak backend scaffold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "psycopg[binary]",
  "alembic",
  "pydantic-settings",
  "httpx",
  "razorpay>=2.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "ruff"
]

[tool.uv]
package = false
